fix::all function